# bullx

./: .archdo.exs  .editorconfig  .env.dev  .env.local.example  .env.test  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.ja.md  README.md  README.zh-Hans.md  SECURITY.md  components.json  lefthook.yml  mix.exs  package.json  rsbuild.config.ts  rslint.config.ts  rstest.config.ts  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.storybook/: global.d.ts  main.ts  preview.tsx  rsbuild.config.ts  tsconfig.json  tsconfig.tsbuildinfo
assets/: vite.config.mjs
assets/css/: app.css
assets/js/: app.js  app.jsx
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
config/support/: bootstrap.exs
lib/: bullx.ex  bullx_accounts.ex  bullx_ai_agent.ex  bullx_brain.ex  bullx_feishu.ex  bullx_gateway.ex  bullx_web.ex
lib/bullx/: ai_agent.ex  application.ex  brain.ex  config.ex  ext.ex  gateway.ex  health.ex  i18n.ex  mailer.ex  repo.ex  runtime.ex  skills.ex
lib/bullx_accounts/: activation_code.ex  authn.ex  authz.ex  bootstrap.ex  changeset.ex  code.ex  permission_grant.ex  user.ex  user_channel_auth_code.ex  user_group.ex  (+2 more)
native/bullx_ext/: Cargo.toml  README.md
native/bullx_ext/src/: cedar.rs  lib.rs  phone.rs
native/bullx_ext/src/crypto/: aead.rs  argon2.rs  blake3.rs
native/bullx_ext/src/crypto/jwt/: algorithm.rs  claims.rs  decode.rs  header.rs  mod.rs  sign.rs  validation.rs  verify.rs
native/bullx_ext/src/encoding/: any_ascii.rs  base58.rs  base64.rs  mod.rs  uuid.rs  z85.rs
test/: test_helper.exs
(+524 files in other folders)
