[package]
name = "bullx_ext"
version = "0.1.0"
edition = "2024"
description = "A Rust library for BullX extensions"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rustler = "0.37.3"
mimalloc = "0.1.48"
any_ascii = "0.3.3"
argon2 = "0.5.3"
base64-simd = "0.8.0"
blake3 = "1.8.4"
bs58 = "0.5.1"
cedar-policy = "4.10"
hex = "0.4.3"
rand = { version = "0.10.1", features = ["sys_rng"] }
rand_chacha = "0.10.0"
rlibphonenumber = "1.1.4"
serde_json = "1.0"
z85 = "3.0.6"



[dependencies.uuid]
version = "1.23.1"
features = ["v4","v7","fast-rng"]
